<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.rowanschischka.rawsensor.MainActivity">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onStartButtonClicked"
        android:text="@string/start_button" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onDestroyClicked"
        android:text="@string/delete_db_button" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onExportClicked"
        android:text="@string/export_database" />
</LinearLayout>
